--- a/src/analyzers.yaml
+++ b/src/analyzers.yaml
@@ -16,4 +16,4 @@ analyzers:
         livox:
           type: diagnostic_aggregator/GenericAnalyzer
           path: Livox
-          contains: [ '/Livox' ]
+          contains: [ '/livox' ]
